# housing-ml-deployment

./: README.md  load.js  push.sh  run.sh
.github/workflows/: main.yml
lab5/: Dockerfile  pyproject.toml
lab5/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  namespace.yaml  service-pythonapi.yaml  service-redis.yaml
lab5/src/: main.py
lab5/tests/: test_src.py
trainer/: train.py
